--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,20 @@ notifications:
         on_failure: always
 
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
   - "mkdir -p src && cd src \
         && git clone  https://github.com/arq5x/bedtools2 \
         && cd bedtools2  \
         && make \
-	&& make install \
 	&& P = `pwd` \
-        && echo export PATH=${P}/bin:$PATH"
-
+        && export PATH=${P}/bin:$PATH"
+  - "cd \
+	&& cd src \
+	&& wget http://sourceforge.net/settings/mirror_choices?projectname=samtools\&filename=samtools/0.1.19/samtools-0.1.19.tar.bz2 \
+	&& cd samtools \
+	&& make \
+	&& P = `pwd` \
+        && export PATH=${P}/bin:$PATH"
+  - "echo $PATH"
 install:
     - "pip install -r requirements.txt --use-mirrors"
     - "python setup.py develop"
