--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ notifications:
         on_failure: always
 
 before_install:
-  - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "echo $PATH"
   - "mkdir -p src && cd src \
         && git clone  https://github.com/arq5x/bedtools2 \
         && cd bedtools2  \
         && make \
-	&& P = `pwd` \
+	&& P=`pwd` \
         && export PATH=${P}/bin:$PATH"
   - "cd \
 	&& cd src \
@@ -23,7 +23,7 @@ before_install:
 	&& tar -xjvf samtools-0.1.19.tar.bz2 \
 	&& cd samtools \
 	&& make \
-	&& P = `pwd` \
+	&& P=`pwd` \
         && export PATH=${P}/bin:$PATH"
   - "echo $PATH"
 install:
