--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_install:
 	&& cd ../.."
   - "echo $PATH"
   - "pip install -U cython"
+  - "pip install bedtools"
+  - "pip install pysam"
 install:
     - "python setup.py install"
 
