--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
 	&& cd ../.."
   - "echo $PATH"
   - "pip install -U cython"
-  - "pip install bedtools"
+  - "pip install pybedtools"
   - "pip install pysam"
 install:
     - "python setup.py install"
