--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include doc/*
 include README.rst
 include LICENSE
 include requirements.txt
-recursive-include *.py
+recursive-include seqcluster *.py
