--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ install:
     - "python setup.py install"
 script: nosetests
 after_script:
+    - "echo $PATH"
     - "cd data/test_cluster"
     - "seqcluster cluster -m seqs_set.ma -a seqs_set.bam -o res -d"
 branches:
