--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - "echo $PATH"
   - "sudo apt-get install bedtools"
   - "pip install conda"
-  - "conda create --yes -n seqcluster python ipython pip distribute setuptools nose numpy pysam scipy panda"
+  - "conda create --yes -n seqcluster python ipython pip distribute setuptools nose numpy pysam scipy pandas"
   - "source activate seqcluster "
   - "mkdir -p deps && cd deps "
   - "wget https://github.com/arq5x/bedtools2/releases/download/v2.22.0/bedtools-2.22.0.tar.gz \
