better logger Test

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script: nosetests
 after_script:
     - "echo $PATH"
     - "cd data/test_cluster"
-    - "seqcluster cluster -m seqs_set.ma -a seqs_set.bam -o res -d"
+    - "seqcluster cluster -m seqs_set.ma -a seqs_map.bam -o res -d"
 branches:
     only:
         - master
