--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ data/test_collapse/prepare/*
 data/examples/database/*
 data/test_cluster/predictions/*
 data/test_cluster/coral/*
+data/simulated/sim*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
