--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pysam>=0.8.2.1
-pybedtools>=0.6.8
-scipy>=0.15.1
-numpy
-nose>=1.3.0
-progressbar>=2.3.0
-pandas>=0.14.1
-bcbio-nextgen>=0.8.7
-colorlog
+#pysam>=0.8.2.1
+#pybedtools>=0.6.8
+#scipy>=0.15.1
+#numpy
+#nose>=1.3.0
+#progressbar>=2.3.0
+#pandas>=0.14.1
+#bcbio-nextgen>=0.8.7
+#colorlog
