Change requeriments in manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ recursive-include seqcluster/templates *
 recursive-include seqcluster/align *so
 include README.rst
 include LICENSE
-include requirements.txt
+include reqs.txt
 recursive-include seqcluster *.py
