Modify test commands.

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,7 @@ install:
 script: nosetests
 after_script:
     - "echo $PATH"
-    - "cd data/test_cluster"
-    - "seqcluster cluster -m seqs_set.ma -a seqs_map.bam -o res -d -ref ../genomes/genome.fa"
-    - "seqcluster report -j res/seqcluster.json -r ../genomes/genome.fa -o report"
+    - "./run_test.sh cluster"
 branches:
     only:
         - master
