--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh
   - bash Miniconda-latest-Linux-x86_64.sh -b -p ~/install
   - sudo apt-get update && apt-get upgrade && \
-    apt-get install -y build-essential unzip && \
-    apt-get install -y libglu1-mesa && \
-    apt-get install -y curl pigz bsdmainutils
+    sudo apt-get install -y build-essential && \
+    sudo apt-get install -y libglu1-mesa && \
+    sudo apt-get install -y curl pigz bsdmainutils
 install:
   - export PATH=~/install/bin/:$PATH
   - conda install --yes -c bioconda bcbio-nextgen seqcluster bedtools samtools pip nose -q
