--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - sudo apt-get install -y build-essential
 install:
   - export PATH=~/install/bin/:$PATH
-  - conda install --yes -c bioconda bcbio-nextgen seqcluster bedtools samtools pip nose -q
+  - conda install --yes -c bioconda bcbio-nextgen seqcluster bedtools samtools ncurses pip nose -q
 script: 
   - nosetests
 after_script:
