--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - bash Miniconda-latest-Linux-x86_64.sh -b -p ~/install
 install:
   - export PATH=~/install/bin/:$PATH
-  - conda install --yes -c bioconda bcbio-nextgen seqcluster bedtools samtools=1.1 pip nose -q
+  - conda install --yes -c bioconda bcbio-nextgen seqcluster bedtools samtools=1.3=0 pip nose -q
 script: 
   - nosetests
 after_script:
