--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - export PATH=~/install/bin/:$PATH
   - conda config --add channels r
   - conda install --yes ncurses -c r
-  - conda install --yes -c bioconda seqcluster bedtools samtools pip nose numpy scipy pandas -q
+  - conda install --yes -c bioconda seqcluster bedtools samtools pip nose numpy scipy pandas pyvcf -q
 script: 
   - nosetests
 branches:
