--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - conda config --add channels r
   - conda install --yes ncurses -c r
   - conda install --yes -c bioconda seqcluster bedtools samtools pip nose numpy scipy pandas pyvcf -q
+  - python setup.py install
 script: 
   - nosetests
 branches:
