--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh
   - bash Miniconda-latest-Linux-x86_64.sh -b -p ~/install
   - export PATH=~/install/bin/:$PATH
-  - conda config --add channels r
-  - conda install --yes ncurses -c r
-  - conda install --yes -c bioconda seqcluster bedtools samtools pip nose numpy scipy pandas pyvcf -q
+  - conda install --yes -c conda-forge -c bioconda seqcluster bedtools samtools pip nose numpy scipy pandas pyvcf -q
   - python setup.py install
 script: 
   - nosetests
