install develop instead

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh
   - bash Miniconda-latest-Linux-x86_64.sh -b -p ~/install
   - export PATH=~/install/bin/:$PATH
-  - conda install --yes -c conda-forge -c bioconda ncurses  seqcluster bedtools samtools pip nose numpy scipy pandas pyvcf pytz dateutil -q
-  - python setup.py install
+  - conda install --yes -c conda-forge -c bioconda ncurses  seqcluster bedtools samtools pip nose numpy scipy pandas pyvcf dateutil -q
+  - python setup.py develop
 script: 
   - nosetests
 branches:
