include requirements to install dependencies.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 recursive-include seqcluster/templates *
 include README.rst
 include LICENSE
-include reqs.txt
+include requirements.txt
 recursive-include seqcluster *.py
